# AndroMoney2Moze

./: AndroMoney2Moze.py  LICENSE  README.md  pyproject.toml  record.py
atm/: record.py
