[tool.poetry]
name = "atm"
version = "0.1.0"
description = "Migration tool for AndroMoney users to convert their data into one that can be imported by Moze 3.0"
authors = ["Teng-Fong Chan <tfchan.cs07g@nctu.edu.tw>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
